[package]
name = "rust_boilerplate"
version = "0.1.0"
edition = "2021"
authors = []
rust-version = "1.65"
readme = "README.md"

[dependencies]
actix-web = "4.2.1"
actix-rt = "2.7.0"
dotenv = "0.15.0"
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.89"
r2d2 = "0.8.10"
diesel = { version = "2.0.2", features = ["mysql", "r2d2", "uuid", "chrono"] }
lazy_static = "1.4.0"
gcp-bigquery-client = "0.16.2"
eyre = "0.6.8"
chrono = { version = "0.4.23", features = ["serde"] }
futures-util = "0.3"
actix-cors = "0.6.4"
lsp-types = "0.93.2"
dirs = "4.0.0"
reqwest = { version = "0.11.13", features = ["blocking", "json"] }
base64 = "0.20.0"
futures = "0.3.25"
config = "0.13.3"
tokio = {version = "1.23.0", features = ["full"] }
env_logger = "0.10.0"
rand = "0.8.5"
gcp_auth = "0.7.4"
async-trait = "0.1.59"
